# VEDA

./: BalanceData.py  DimensionReducer.py  FeatureSelection.py  FeatureSelector.py  LICENSE  MANIFEST.in  NOTICE  OutlierHandler.py  Preprocesser.py  Preprocessor.py  README.md  balance_data.py  deployment.txt  dimensionality_reduction.py  feature_selection.py  iris.py  missing_value.py  outlier.py  readme.md  requirement.txt  requirements.txt  setup.cfg  setup.py  temp_file.csv  tester.py
.github/workflows/: python-package.yml
.gitignore/DataVEDA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
.gitignore/python_veda.egg-info/: PKG-INFO  SOURCES.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
cleaned_data/: Student_performance.csv  car_data.csv  framingham.csv  handle_this_data.csv  laptop_price.csv  song_data.csv
src/: FeatureSelector.py  OutlierHandler.py  Preprocessor.py  iris.py  missing_value.py
src/VEDA/: BalanceData.py  DimensionReducer.py  FeatureSelector.py  OutlierHandler.py  Preprocessor.py  Veda.py
src/catboost_info/: learn_error.tsv  time_left.tsv
src/catboost_info/test/: events.out.tfevents
src/cleaned_data/: bankloan.csv  car_web_scraped_dataset.csv  possum.csv  student_data.csv
src/tests/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py
src/veda_lib/: BalanceData.py  DimensionReducer.py  FeatureSelector.py  OutlierHandler.py  Preprocessor.py  Veda.py  __init__.py
tests/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py
tests/sample_data/: sample.csv
