[metadata]
name = VEDA
version = 0.1.0  # Initial version
author = Vishal Maurya
author_email = vishallmaurya210@gmail.com
description = A Python library for data cleaning
long_description = file: README.md
url = https://github.com/vishallmaurya/VEDA  # Replace with your GitHub repo URL
license = Apache License 2.0
license_files=LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = data cleaning, python library, search engine
project_urls =
    Bug Tracker = https://github.com/vishallmaurya/VEDA/issues
