[metadata]
name = VEDA
version = 0.1.0  # Initial version
author = Vishal Maurya
author_email = vishallmaurya210@gmail.com
description = A Python library for data cleaning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vishallmaurya/VEDA  # Replace with your GitHub repo URL
license = Apache License 2.0
license_files=LICENSE
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = data cleaning, python library, search engine
project_urls =
    Bug Tracker = https://github.com/vishallmaurya/VEDA/issues

[options]
packages = find:
python_requires = >=3.6


[options.packages.find]
include = 
    VEDA

[options.package_data]
* = README.md, LICENSE

[options]
install_requires = 
    numpy>=1.21.0
    pandas>=1.3.0
    scikit-learn>=0.24.0
    imbalanced-learn>=0.8.0
    tensorflow>=2.4.0
    umap-learn>=0.5.0
    optuna>=2.7.0
    statsmodels>=0.12.0
    diptest>=0.1.0